# FocusAI

./: .env.example  .gitignore  README.md  pyproject.toml
FocusAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/agents/: action_agent.py  chain.py  graph.py  mentor_agent.py  session_agent.py
backend/agents/prompts/: action.j2
backend/api/: main.py
backend/api/routers/: __init__.py  analytics.py  camera.py  chat.py  dashboard.py  feedback.py  history.py  session.py  upload.py  welcome.py
backend/core/: config.py  database.py  schemas.py
backend/core/migrations/: __init__.py  runner.py
backend/cv_engine/: __init__.py  buffer.py  main.py  pipeline.py
backend/cv_engine/extractors/: __init__.py  emotion.py  gaze.py  gesture.py  pose.py
backend/memory/: long_term.py  short_term.py
backend/rag/: indexer.py  rag_agent.py  retriever.py
backend/scorer/: rules.py  scorer.py
backend/services/: analytics_service.py  baseline_service.py  behavior_service.py  camera_runtime_service.py  continuity_service.py  feedback_service.py  history_service.py  intervention_policy_service.py  response_policy_service.py  session_service.py
backend/state/: decision_controller.py  feature_classifier.py  feature_deviation_scorer.py  feature_extractor.py  probabilistic_scorer.py  rule_signal_extractor.py  semantic_features.py  state_model.py  uncertainty_engine.py
data/: mentor.db
frontend/: App.tsx  camera-dev.html  index.html  main.tsx  package-lock.json  package.json  store.ts  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: check_environment.py  demo_fatigue_profiles.py  export_feature_training_data.py  inspect_mem0.py  migrate.py  refresh_feature_classifier.py
tests/: test_api_integration.py  test_fatigue_regression.py  test_feature_classifier.py  test_feature_extractor.py  test_feature_training_scripts.py  test_frustration_regression.py  test_state_scenarios.py  test_text_signal_expansion.py
