[project]
name = "FocusAI"
version = "0.1.0"
description = "AI Destekli Dikkat Analiz Sistemi"
authors = [
    { name = "FocusAI Team" }
]
requires-python = ">=3.10"
dependencies = [
    # Backend & API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # Görüntü İşleme (CV) & Yapay Zeka
    "opencv-python>=4.9.0",
    "mediapipe==0.10.30",
    "deepface>=0.0.84",
    
    # LLM & Ajanlar
    "langchain>=0.1.13",
    "langgraph>=0.0.30",
    "openai>=1.14.0",
    "langchain_openai",
    
    # Yardımcı Araçlar
    "python-dotenv>=1.0.1",

    "pymupdf>=1.24.0",
    "faiss-cpu>=1.8.0",
    "langchain-community>=0.2.0",

    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
]

[tool.ruff]
# Ruff, kodunuzun profesyonel standartlarda (PEP 8) yazılmasını zorlayan harika bir araçtır.
line-length = 88
target-version = "py310"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
