[project]
name = "FocusAI"
version = "0.1.0"
description = "AI Destekli Dikkat Analiz Sistemi"
authors = [
    { name = "FocusAI Team" }
]
requires-python = ">=3.10"

dependencies = [
    # Backend & API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.29",
    "python-multipart>=0.0.9",

    # Ajan akışı
    "langgraph>=0.0.30",
    
    # Yardımcı Araçlar
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]
llm = [
    "openai>=1.14.0",
]
rag = [
    "openai>=1.14.0",
    "langchain-openai",
    "langchain-text-splitters>=0.2.0",
    "pymupdf>=1.24.0",
    "faiss-cpu>=1.8.0",
    "langchain-community>=0.2.0",
]
memory = [
    "openai>=1.14.0",
    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
]
cv = [
    "opencv-python>=4.9.0",
    "mediapipe==0.10.30",
    "deepface>=0.0.84",
]

[tool.ruff]
# Ruff, kodunuzun profesyonel standartlarda (PEP 8) yazılmasını zorlayan harika bir araçtır.
line-length = 88
target-version = "py310"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
